@@ -43,7 +43,16 @@ import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
 class SendDocumentTaskExecutorTest {
+
     private static final int SIZE_THRESHOLD_FOUR = 4;
+    private static final int SIZE_OF_EACH_CHUNK = 1;
+    private static final int NUMBER_OF_CHUNKS = 5;
+    private static final String STORAGE_FILE_NAME = "large_file_which_will_be_split.txt";
+    private static final String STORAGE_CONTENT_TYPE_UNUSED = "should-not-be-used";
+    private static final String RANDOM_ID = "RANDOM-ID";
+    private static final String RANDOM_ODS = "RANDOM-ODS";
+    private static final String MESSAGE_ID = "88";
+    private static final String TASK_CONTENT_TYPE = "should-be-used";
     @Mock private EhrExtractStatusService ehrExtractStatusService;
     @Mock private DetectDocumentsSentService detectDocumentsSentService;
     @Mock private MhsClient mhsClient;
@@ -62,68 +71,56 @@ class SendDocumentTaskExecutorTest {
     @SneakyThrows
     @Test
     void When_DocumentNeedsToBeSplitIntoFiveChunks_Expect_FiveMhsRequestsWithAttachmentsOfContentTypeOctetStream() {
-        final int SIZE_OF_EACH_CHUNK = 1;
-        final int NUMBER_OF_CHUNKS = 5;
-        final String storageFileName = "large_file_which_will_be_split.txt";
-
         // Arrange
         this.gp2gpConfiguration.setLargeAttachmentThreshold(SIZE_OF_EACH_CHUNK);
-        uploadDocumentToStorageWrapperWithPayloadSize(SIZE_OF_EACH_CHUNK * NUMBER_OF_CHUNKS, storageFileName, "should-not-be-used");
+        uploadFiveChunkDocumentToStorage();
 
         // Act
-        this.sendDocumentTaskExecutor.execute(
-            SendDocumentTaskDefinition.builder()
-                .documentName(storageFileName)
-                .messageId("88")
-                .fromOdsCode("RANDOM-ODS")
-                .conversationId("RANDOM-ID")
-                .documentContentType("should-be-used")
-                .build()
-        );
+        this.sendDocumentTaskExecutor.execute(createTaskDefinition());
 
         // Assert
         verify(mhsRequestBuilder, times(NUMBER_OF_CHUNKS)).buildSendEhrExtractCommonRequest(
-            argThat(mhsRequestBodyContainsAttachmentWithContentType(MimeTypes.OCTET_STREAM)),
-            eq("RANDOM-ID"),
-            eq("RANDOM-ODS"),
+            argThat(mhsRequestBodyContainsOctetStreamAttachment()),
+            eq(RANDOM_ID),
+            eq(RANDOM_ODS),
             any()
         );
+        verify(mhsClient, times(NUMBER_OF_CHUNKS + 1)).sendMessageToMHS(any());
     }
 
     @DisplayName("When_DocumentNeedsToBeSplitInto5Chunks_Expect_"
             + "MhsMessageWith5ExternalAttachmentWithDescriptionContentTypeHeaderFromTaskDefinition")
     @Test
     void When_DocumentNeedsToBeSplitInto5Chunks_Expect_MhsMessageWith5ExternalAttachmentCorrectlySet() {
-        final int SIZE_OF_EACH_CHUNK = 1;
-        final int NUMBER_OF_CHUNKS = 5;
-        final String storageFileName = "large_file_which_will_be_split.txt";
-
         // Arrange
         this.gp2gpConfiguration.setLargeAttachmentThreshold(SIZE_OF_EACH_CHUNK);
-        uploadDocumentToStorageWrapperWithPayloadSize(SIZE_OF_EACH_CHUNK * NUMBER_OF_CHUNKS, storageFileName, "should-not-be-used");
+        uploadFiveChunkDocumentToStorage();
 
         // Act
-        this.sendDocumentTaskExecutor.execute(
-                SendDocumentTaskDefinition.builder()
-                        .documentName(storageFileName)
-                        .messageId("88")
-                        .fromOdsCode("RANDOM-ODS")
-                        .conversationId("RANDOM-ID")
-                        .documentContentType("should-be-used")
-                        .build()
-        );
+        this.sendDocumentTaskExecutor.execute(createTaskDefinition());
 
         // Assert
         verify(mhsRequestBuilder, times(1)).buildSendEhrExtractCommonRequest(
-                argThat(mhsRequestBodyWithAnExternalAttachmentForEachChunkWithContentType(NUMBER_OF_CHUNKS, "should-be-used")),
-                eq("RANDOM-ID"),
-                eq("RANDOM-ODS"),
+                argThat(mhsRequestBodyHasExternalAttachmentForEachChunkWithTaskContentType()),
+                eq(RANDOM_ID),
+                eq(RANDOM_ODS),
                 any()
         );
+        verify(mhsClient, times(NUMBER_OF_CHUNKS + 1)).sendMessageToMHS(any());
+    }
+
+    private SendDocumentTaskDefinition createTaskDefinition() {
+        return SendDocumentTaskDefinition.builder()
+            .documentName(STORAGE_FILE_NAME)
+            .messageId(MESSAGE_ID)
+            .fromOdsCode(RANDOM_ODS)
+            .conversationId(RANDOM_ID)
+            .documentContentType(TASK_CONTENT_TYPE)
+            .build();
     }
 
     @NotNull
-    private static ArgumentMatcher<String> mhsRequestBodyContainsAttachmentWithContentType(String contentType) {
+    private static ArgumentMatcher<String> mhsRequestBodyContainsOctetStreamAttachment() {
         return mhsRequestBody -> {
             ObjectMapper objectMapper = new ObjectMapper();
             OutboundMessage outboundMessage;
@@ -135,13 +132,13 @@ class SendDocumentTaskExecutorTest {
             if (outboundMessage.getAttachments().isEmpty()) {
                 return false;
             }
-            return Objects.equals(outboundMessage.getAttachments().get(0).getContentType(), contentType);
+            return Objects.equals(outboundMessage.getAttachments().getFirst().getContentType(), MimeTypes.OCTET_STREAM);
         };
     }
 
     @NotNull
     private static ArgumentMatcher<String>
-        mhsRequestBodyWithAnExternalAttachmentForEachChunkWithContentType(int numberOfChunks, String contentType) {
+        mhsRequestBodyHasExternalAttachmentForEachChunkWithTaskContentType() {
 
         return mhsRequestBody -> {
             ObjectMapper objectMapper = new ObjectMapper();
@@ -151,28 +148,28 @@ class SendDocumentTaskExecutorTest {
             } catch (JsonProcessingException e) {
                 return false;
             }
-            if (outboundMessage.getExternalAttachments() == null || outboundMessage.getExternalAttachments().size() != numberOfChunks) {
+            if (outboundMessage.getExternalAttachments() == null
+                || outboundMessage.getExternalAttachments().size() != NUMBER_OF_CHUNKS) {
                 return false;
             }
             return outboundMessage.getExternalAttachments().stream().allMatch(
-                    externalAttachment -> externalAttachment.getDescription().contains("ContentType=" + contentType)
+                    externalAttachment -> externalAttachment.getDescription().contains("ContentType=" + TASK_CONTENT_TYPE)
             );
         };
     }
 
-    private void uploadDocumentToStorageWrapperWithPayloadSize(int payloadSize, String storageFileName, String contentType) {
-        byte[] storageDataWrapper = generateStorageDataWrapper(payloadSize, contentType);
+    private void uploadFiveChunkDocumentToStorage() {
+        byte[] storageDataWrapper = generateStorageDataWrapper();
         this.storageConnector.uploadToStorage(
             new ByteArrayInputStream(storageDataWrapper),
             storageDataWrapper.length,
-                storageFileName
+                STORAGE_FILE_NAME
         );
     }
 
-    @NotNull
-    private static byte[] generateStorageDataWrapper(int sizeOfPayload, String contentType) {
-        String payload = "a".repeat(sizeOfPayload);
-        String attachment = "{\"content_type\":\"" + contentType + "\",\"is_base64\":false"
+    private static byte[] generateStorageDataWrapper() {
+        String payload = "a".repeat(SIZE_OF_EACH_CHUNK * NUMBER_OF_CHUNKS);
+        String attachment = "{\"content_type\":\"" + STORAGE_CONTENT_TYPE_UNUSED + "\",\"is_base64\":false"
                 + ",\"description\":\"\",\"payload\":\"" + payload + "\"}";
         String outboundMessage = "{\"payload\": \"\", \"attachments\": [" + attachment + "], \"external_attachments\": []}";
         String encodedData = outboundMessage.replace("\"", "\\\""); // Poor persons JSON encode
